@@ -32,7 +32,6 @@ Project:
 - template to create a Visual D project from an existing source tree
 - project config: edit all configurations only changes current config
 - breaking into build does not stop dmd
-- -property option
 
 Language service:
 ---------------
@@ -44,7 +43,6 @@ Language service:
 - disable parsing/outlining for large files?
 - version highlighting does not support version(x): syntax
 - replace token: empty dialog when opened without resizing
-- when hovering identifier with preceding dot, include identifier before dot in debugger tool tip
 - check indentation of multiple string literals on several lines
 - show help in standard browser
 - VS no longer remembers position inside file across restart?
