@@ -373,4 +373,5 @@ unreleased Version 0.3.30
   * added checkbox for options -gs and -property to project configuration
   * added new color to highlight predefined versions
   * creating new folder now initiates renaming it
-
+  * fixed error message capture for error list in case the message also contains "filename(lineno):"
+  * new options on page "Tools->Options->Text Editor->D->Colorizer" to select sources of code completion
